# stm32h747xi-embassy-uart-troubleshoot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  memory.x  rust-toolchain.toml  test_linux.sh  test_mac.sh  upload.sh
.cargo/: config.toml
.github/workflows/: ci.yml
issues/: arduino_uno_wifi_rev2_serial_echo.ino
resources/: Arduino_GIGA_R1_pins.xlsx
resources/stm32h747xi/: README.md
rtos/: Cargo.toml  build.rs
rtos/src/: board.rs  common.rs  consts.rs  error.rs  main.rs
rtos/src/mem/: mod.rs
