[workspace]
resolver = "2"

members = [
    "rtos",
]

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "da86c08" }

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false
lto = true # better optimizations
opt-level = "s" # optimize for binary size, if size is availabe, change to 3?
