[workspace]
resolver = "2"

members = [
    "rtos",
]

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "4d4cbc0" }

#  DEV ONLY
# embassy-time = { path = "../embassy_fork/embassy-time" }
# embassy-executor = { path = "../embassy_fork/embassy-executor" }
# embassy-stm32 = { path = "../embassy_fork/embassy-stm32" }
# embassy-sync = { path = "../embassy_fork/embassy-sync" }
# embassy-futures = { path = "../embassy_fork/embassy-futures" }
# embassy-embedded-hal = { path = "../embassy_fork/embassy-embedded-hal" }
# embassy-net = { path = "../embassy_fork/embassy-net" }
# embassy-usb = { path = "../embassy_fork/embassy-usb" }

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false
lto = true # better optimizations
opt-level = "s" # optimize for binary size, if size is availabe, change to 3?
